<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/tvDetailAbout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                tools:text="Squirtle’s shell is not merely used for protection. The shell’s rounded shape and the grooves on its surface help minimize resistance in water, enabling this pokemon to swim at high speed."
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titlePokedexData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pokedex_data_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvDetailAbout"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailAbout" />

            <TextView
                android:id="@+id/titleTraining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/training_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailAbilities" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/species"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/titlePokedexData"
                app:layout_constraintTop_toBottomOf="@+id/titlePokedexData" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/abilities"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ev_yield"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/titleTraining"
                app:layout_constraintTop_toBottomOf="@+id/titleTraining" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/catch_rate"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/base_friendship"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/base_exp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/growth_rate"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/tvDetailSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                tools:text="Seed Pokemon"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/tvDetailHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0.7m (2'04&quot;)"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/tvDetailSpecies"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/tvDetailWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="6.9kg (15.2lbs)"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/tvDetailHeight"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <TextView
                android:id="@+id/tvDetailAbilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tvDetailWeight"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                tools:text="1. Overgrow" />

            <TextView
                android:id="@+id/tvDetailEVYield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_applicable"
                tools:text="1. Special Attack"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/tvDetailAbilities"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/tvDetailCatchRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="45 (5.9% with Pokeball, full HP)"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/tvDetailEVYield"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <TextView
                android:id="@+id/tvDetailBaseFriendship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="70 Noramal"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/tvDetailCatchRate"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <TextView
                android:id="@+id/tvDetailBaseExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="64"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="@+id/tvDetailBaseFriendship"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <TextView
                android:id="@+id/tvDetailGrowthRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Medium Slow"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintStart_toStartOf="@+id/tvDetailBaseExp"
                app:layout_constraintTop_toTopOf="@+id/textView14" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>